new structure auth controllers
